# audio_classifier

./: .dockerignore  .ebignore  .gitignore  Dockerfile  Dockerrun.aws.json  README.md  main.py  project_structure.txt  pyproject.toml  s3-policy.json
.elasticbeanstalk/: config.yml
.github/workflows/: deploy.yml
.platform/nginx/conf.d/: cors.conf
backend/: Dockerfile  app.py  requirements.txt
frontend/: index.html  script.js  styles.css
scripts/: preprocess.py
src/: data_loader.py  model.py  train.py  transforms.py  utils.py
